--- a/Hackathon - Fichier principal.html
+++ b/Hackathon - Fichier principal.html
@@ -13079,6 +13079,11 @@ div#notebook {
 <div class="text_cell_render border-box-sizing rendered_html">
 <hr>
 <h1 id="Hackathon---Quelle(s)-&#233;nergie(s)-pour-demain-?"><center>Hackathon - Quelle(s) &#233;nergie(s) pour demain ?</center><a class="anchor-link" href="#Hackathon---Quelle(s)-&#233;nergie(s)-pour-demain-?">&#182;</a></h1><hr>
+<p><em>Hiroto YAMAKAWA<br>
+Thomas KOCH<br>
+Thomas RIVIERE<br>
+Philippe BENEZETH<br>
+Xavier BRACQUART</em></p>
 
 </div>
 </div>
